Lagt til tester for ui
- Lagt til modul "report" som aggregerer test-rapportene fra ui- og
core-modulen.